tests/NormalTests/paczka1/small_fuzzy/63880033.err
Error in line 1: 0TMD8NiMf2 S299 4b,4
Error in line 3: 0TMD8NiMf2 S299 119,4
